Add answer validation and fix menu issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,8 @@
 <footer>
     <br>
     <div class="container text-center">
-        <!-- 
         <div>
-            <address>Built with Python and Bootstrap. Hosted (will be) on <a class="text-dark" rel="nofollow" href="https://aws.amazon.com">AWS</a>.</address>
-        </div> -->
-        <div>
-            <address>This is an open-source project built with Python and Bootstrap. Please consider contributing. &copy; 2024, <a href="https://github.com/bugrakilic" target="_blank">Bugra Kilic</a>.</address>
+            <address>This is an open-source project built with Python and Bootstrap. Please consider contributing. 2024, <a href="https://bugrakilic.net" target="_blank">Bugra Kilic</a>.</address>
         </div>
     </div>
 </footer>
