--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>Cloud Migration Maturity Test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" sizes="32px" type="image/x-icon" href="static/images/cmt-logo.png">
 </head>
 <body>
     <div class="container mt-4">
@@ -19,7 +20,7 @@
     <br>
     <div class="container text-center">
         <div>
-            <address>This is an open-source project built with Python and Bootstrap. Please consider contributing. 2024, <a href="https://bugrakilic.net" target="_blank">Bugra Kilic</a>.</address>
+            <address>This is an open-source project for increasing the awareness of cloud migration. Please consider contributing. <br> 2024, <a href="https://bugrakilic.net" target="_blank">Bugra Kilic</a>.</address>
         </div>
     </div>
 </footer>
