--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,10 @@
     <br>
     <div class="container text-center">
         <div>
-            <address>This is an open-source project for increasing the awareness of cloud migration. Please consider contributing. <br> 2024, <a href="https://bugrakilic.net" target="_blank">Bugra Kilic</a>.</address>
+            <address>Open-source project for increasing the awareness of cloud migration. Please consider contributing.
+                <br> <a href="https://aws.amazon.com/q/developer/" target="_blank">Amazon Q Developer</a> is utilized while building this project. 
+                Built with Flask and Bootstrap, deployed on Vercel.
+                <br> &copy; 2025 <a href="https://bugrakilic.net" target="_blank">Bugra Kilic</a></address>
         </div>
     </div>
 </footer>
